[project]
name = "api-limiter"
version = "0.1.0"
description = "Api Limiter"
authors = [
    {name = "victorgabrieldeon", email = "victordeonroyale@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
